# Remill-multiple-instruction-translator

./: README.txt  extract-instructions.cpp  output.txt  remill-multi-instruction.cpp  temp.txt  test-input.txt
Cmake/: CMakeLists.txt  extract-instructions.cpp  remill-multi-lift.cpp
